--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "chess",
   "type": "module",
+  "private": true,
   "jest": {
     "testEnvironment": "jsdom",
     "transform": {}
@@ -9,6 +11,8 @@
   },
   "devDependencies": {
     "jest": "^27.5.1",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   }
 }
