--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "name": "chess",
-  "type": "module",
   "private": true,
   "jest": {
     "testEnvironment": "jsdom",
     "transform": {}
   },
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open",
+    "build": "webpack"
   },
   "devDependencies": {
+    "css-loader": "^6.6.0",
     "jest": "^27.5.1",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.7",
     "typescript": "^4.6.2",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
