--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "build": "webpack"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "css-loader": "^6.6.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
+    "prettier": "^2.5.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.7",
     "typescript": "^4.6.2",
