--- a/.eslintrc
+++ b/.eslintrc
@@ -11,5 +11,9 @@
   "rules": {
     "no-console": 1, // Means warning
     "prettier/prettier": 2 // Means error  }
+  },
+  "env": {
+    "browser": true,
+    "node": true
   }
 }
