--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "outDir": "./build",
     "allowJs": true,
-    "target": "es5"
+    "target": "es5",
+    "downlevelIteration": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true
   },
   "include": ["./src/**/*"]
 }
