--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "css-loader": "^6.6.0",
-    "eslint": "^8.10.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.2.0",
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
     "style-loader": "^3.3.1",
