--- a/package.json
+++ b/package.json
@@ -2,18 +2,44 @@
   "name": "chess",
   "private": true,
   "jest": {
+    "preset": "ts-jest/presets/js-with-babel",
     "testEnvironment": "jsdom",
-    "transform": {}
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ],
+      "@babel/typescript"
+    ]
   },
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test": "jest",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "build": "webpack"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
+    "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
@@ -25,6 +51,7 @@
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
     "style-loader": "^3.3.1",
+    "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.7",
     "typescript": "^4.6.2",
     "webpack": "^5.70.0",
