--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "downlevelIteration": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "esModuleInterop": true
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*", "tests"],
+  "types": ["@types/jest"]
 }
