--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@babel/parser": "^7.17.3",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@babel/types": "^7.17.0",
     "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
