--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
           }
         }
       ],
-      "@babel/typescript"
+      "@babel/typescript",
+      "@babel/preset-react"
     ]
   },
   "scripts": {
@@ -36,6 +37,7 @@
     "@babel/core": "^7.17.5",
     "@babel/parser": "^7.17.3",
     "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/types": "^7.17.0",
     "@types/jest": "^27.4.1",
@@ -59,5 +61,12 @@
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
