--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "crochess-api",
-  "version": "1.0.0",
+  "version": "1.0.3",
+  "main": "./dist/main.js",
+  "files": [
+    "dist"
+  ],
   "private": false,
   "jest": {
     "preset": "ts-jest/presets/js-with-babel",
@@ -10,7 +14,6 @@
     },
     "moduleFileExtensions": [
       "ts",
-      "tsx",
       "js"
     ]
   },
@@ -24,28 +27,26 @@
           }
         }
       ],
-      "@babel/typescript",
-      "@babel/preset-react"
+      "@babel/typescript"
     ]
   },
   "scripts": {
     "test": "jest",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
-    "build": "webpack"
+    "build": "webpack",
+    "prepublishOnly": "webpack --mode=production"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/parser": "^7.17.3",
     "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/types": "^7.17.0",
     "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "babel-loader": "^8.2.3",
-    "css-loader": "^6.6.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
@@ -55,7 +56,6 @@
     "eslint-plugin-promise": "^5.2.0",
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
-    "style-loader": "^3.3.1",
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.7",
     "typescript": "^4.6.2",
@@ -64,11 +64,6 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.40",
-    "@types/react-dom": "^17.0.13",
-    "next": "^12.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@types/node": "^17.0.21"
   }
 }
