--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "sourceMap": true,
-    "esModuleInterop": true,
-    "jsx": "react"
+    "esModuleInterop": true
   },
   "include": ["./src/**/*", "tests"],
   "types": ["@types/jest"]
