--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "crochess-api",
-  "version": "1.0.3",
+  "version": "1.0.8",
   "main": "./dist/main.js",
+  "types": "./dist/main.d.ts",
   "files": [
     "dist"
   ],
@@ -64,6 +65,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
-    "@types/node": "^17.0.21"
+    "@types/node": "^17.0.21",
+    "crochess-api": "^1.0.5"
   }
 }
